--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,37 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="mainlogo.png">
-    <title>
-        <%= htmlWebpackPlugin.options.title %>
-    </title>
+
+
+
+
+     <title>Er. Anil Kumar Thakur</title>
+    <meta name='description' itemprop='description' content='I am Er. Anil Kumar Thakur a Full Stack Developer Professional Coder, very passionate and dedicated to my work, With one 1year plus years of experience as a professional web developer, I enjoy every step of the design process, to the development process.' />
+       <link rel="canonical" href="http://anilkumarthakur.com.np" />
+
+    <meta name='keywords' content='Er. Anil Kumar Thakur, Anil Kumar Thakur, Anil Kumar Thakur Kathford College ,Anil Kumar Thakur Janakpur, Full Stack Developer Anil,Full Stack Developer Anil Kumar ,Full Stack Developer Anil Kuma Thakur , Laravel Developer Anil, Vue Developer Anil' />
+    <meta property='article:section' content='Full Stack Developer' />
+
+    <meta property="og:description"content="I am Er. Anil Kumar Thakur a Full Stack Developer Professional Coder, very passionate and dedicated to my work, With one 1year plus years of experience as a professional web developer, I enjoy every step of the design process, to the development process." />
+    <meta property="og:title"content="Er. Anil Kumar Thakur" />
+    <meta property="og:url"content="http://anilkumarthakur.com.np" />
+    <meta property="og:type"content="Full Stack Developer " />
+    <meta property="og:locale"content="pt-br" />
+    <meta property="og:locale:alternate"content="pt-pt" />
+    <meta property="og:locale:alternate"content="en-us" />
+    <meta property="og:site_name"content="Anil Kumar Thakur Portfolio" />
+    <meta property="og:image"content="http://anilkumarthakur.com.np/anil.jpg" />
+    <meta property="og:image:url"content="http://anilkumarthakur.com.np/anil.jpg" />
+    <meta property="og:image:size"content="300" />
+
+    <meta name="twitter:card"content="I am Er. Anil Kumar Thakur a Full Stack Developer Professional Coder, very passionate and dedicated to my work, With one 1year plus years of experience as a professional web developer, I enjoy every step of the design process, to the development process." />
+    <meta name="twitter:title"content="Er. Anil Kumar Thakur" />
+    <meta name="twitter:site"content="@kumaranil60" />
+    
+    <!-- OR with multi -->
+    <script type="application/ld+json">{"@context":"http://anilkumarthakur.com.np","@type":"Portfolio","name":"Er.Anil Kumar Thakur"}</script>
+
+  
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
 </head>
 
@@ -17,7 +44,6 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
 </body>
 
 </html>
