--- a/public/index.html
+++ b/public/index.html
@@ -54,6 +54,8 @@
     <meta name="twitter:title" content="Er. Anil Kumar Thakur" />
     <meta name="twitter:site" content="@kumaranil60" />
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
     <!-- OR with multi -->
     <script type="application/ld+json">
         {
