--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
 
 
     <title>Er. Anil Kumar Thakur</title>
+    <link rel="icon" type="image/png" href="anil.png" />
+
     <meta name='description' itemprop='description' content='I am Er. Anil Kumar Thakur a Full Stack Developer Professional Coder, very passionate and dedicated to my work, With one 1year plus years of experience as a professional web developer, I enjoy every step of the design process, to the development process.'
     />
     <link rel="canonical" href="http://anilkumarthakur.com.np/" />
